--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
             margin: 0;
             padding: 0;
             width: 100%;
+            min-width: 750px;
         }
         body {
             text-align: center;
