--- a/index.html
+++ b/index.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <title>Miras Workout challenge</title>
 </head>
+
 <body>
-    <h1>Miras' 30 days "<a href="https://darebee.com/programs/square-one.html" target="_blank">Square One</a>" challenge</h1>
+    <h1>Miras' 30 days "<a href="https://darebee.com/programs/square-one.html" target="_blank">Square One</a>" challenge
+    </h1>
     <div id="calendar" class='calendar'>
+        <div class="lds-ellipsis">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </div>
+
+    <script>
+        const calendarInitHtml = `
         <div class="header">
             <div>Monday</div>
             <div>Tuesday</div>
@@ -17,25 +30,7 @@
             <div>Friday</div>
             <div>Saturday</div>
             <div>Sunday</div>
-        </div>
-    </div>
-
-    <script>
-        const doneDays = {
-            0: {
-                6: 1,
-                7: 2,
-            },
-            1: {
-                1: 3,
-                2: 4,
-                3: 5,
-                4: -1,
-                5: -1,
-                6: 6,
-                7: 7,
-            }
-        }
+        </div>`
         const calendarElement = document.getElementById("calendar");
         const getDoneElement = (dayNum) => {
             const url = `https://darebee.com/programs/square-one.html?showall=&start=${dayNum}`;
@@ -73,28 +68,40 @@
             return div;
         }
 
-        for (let i = 0; i < 5; i++) {
-            const weekElement = getWeekElement();
-            for (let j = 1; j <= 7; j++) {
-                const dayElement = getDayElement()
-                if (doneDays[i]?.[j] === -1) {
-                    dayElement.appendChild(getSkipElement());
+
+
+        function fillCalendar(doneDays = {}) {
+            calendarElement.innerHTML = calendarInitHtml;
+            for (let i = 0; i < 5; i++) {
+                const weekElement = getWeekElement();
+                for (let j = 1; j <= 7; j++) {
+                    const dayElement = getDayElement()
+                    if (doneDays[i]?.[j] === -1) {
+                        dayElement.appendChild(getSkipElement());
+                    }
+                    if (doneDays[i]?.[j] > 0) {
+                        dayElement.appendChild(getDoneElement(doneDays[i][j]))
+                    }
+                    weekElement.appendChild(dayElement)
                 }
-                if (doneDays[i]?.[j] > 0) {
-                    dayElement.appendChild(getDoneElement(doneDays[i][j]))
-                }
-                weekElement.appendChild(dayElement)
+                calendarElement.appendChild(weekElement);
             }
-            calendarElement.appendChild(weekElement);
         }
+
+        fetch('https://gist.githubusercontent.com/kenzhemir/1123b28f7f597f71e49678bda5fec0f2/raw/data.json').then((response) => {
+            response.json().then(fillCalendar);
+        }).catch((error) => console.log(error));
+
     </script>
     <style>
-        html, body {
+        html,
+        body {
             margin: 0;
             padding: 0;
             width: 100%;
             min-width: 750px;
         }
+
         body {
             text-align: center;
             display: flex;
@@ -102,14 +109,17 @@
             align-items: center;
             flex-direction: column;
         }
+
         * {
-            font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+            font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
             vertical-align: middle;
         }
+
         a {
             color: rgb(37, 174, 136);
             text-decoration: none;
         }
+
         .calendar {
             display: flex;
             flex-direction: column;
@@ -124,6 +134,7 @@
             flex-grow: 1;
             flex-basis: 1px;
         }
+
         .day {
             flex-grow: 1;
             flex-basis: 1px;
@@ -135,31 +146,109 @@
             flex-direction: column;
             padding-bottom: 10px;
         }
+
         .day img {
             width: 20px;
             height: 20px;
         }
+
         .day:last-child {
             border-right: 1px solid black;
         }
-        .week:last-child > .day {
+
+        .week:last-child>.day {
             border-bottom: 1px solid black;
         }
+
         .header {
             display: flex;
             flex-direction: row;
             height: 40px;
             line-height: 36px;
         }
-        .header > div {
+
+        .header>div {
             flex-grow: 1;
             flex-basis: 1px;
             border-top: 1px solid black;
             border-left: 1px solid black;
         }
-        .header > div:last-child{
+
+        .header>div:last-child {
             border-right: 1px solid black;
+        }
+
+
+        /* pure CSS loader from https://loading.io/css/ */
+
+        .lds-ellipsis {
+            display: inline-block;
+            position: relative;
+            width: 80px;
+            height: 80px;
+            margin: auto;
+        }
+
+        .lds-ellipsis div {
+            position: absolute;
+            top: 33px;
+            width: 13px;
+            height: 13px;
+            border-radius: 50%;
+            background: rgb(37, 174, 136);
+            animation-timing-function: cubic-bezier(0, 1, 1, 0);
+        }
+
+        .lds-ellipsis div:nth-child(1) {
+            left: 8px;
+            animation: lds-ellipsis1 0.6s infinite;
+        }
+
+        .lds-ellipsis div:nth-child(2) {
+            left: 8px;
+            animation: lds-ellipsis2 0.6s infinite;
+        }
+
+        .lds-ellipsis div:nth-child(3) {
+            left: 32px;
+            animation: lds-ellipsis2 0.6s infinite;
+        }
+
+        .lds-ellipsis div:nth-child(4) {
+            left: 56px;
+            animation: lds-ellipsis3 0.6s infinite;
+        }
+
+        @keyframes lds-ellipsis1 {
+            0% {
+                transform: scale(0);
+            }
+
+            100% {
+                transform: scale(1);
+            }
+        }
+
+        @keyframes lds-ellipsis3 {
+            0% {
+                transform: scale(1);
+            }
+
+            100% {
+                transform: scale(0);
+            }
+        }
+
+        @keyframes lds-ellipsis2 {
+            0% {
+                transform: translate(0, 0);
+            }
+
+            100% {
+                transform: translate(24px, 0);
+            }
         }
     </style>
 </body>
+
 </html>
