--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <title>Miras Workout challenge</title>
+    <link rel="icon" type="image/png" href="favicon.ico">
 </head>
 
 <body>
